@@ -5,6 +5,7 @@ version <next>:
 - libaribcaption decoder
 - Playdate video decoder and demuxer
 - Extend VAAPI support for libva-win32 on Windows
+- afireqsrc audio source filter
 
 version 6.0:
 - Radiance HDR image support
